fix carousel mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ header.hide {
     opacity: 1;
     transform: none;
     margin-bottom: 20px;
+    left: 0;
   }
 
   .carousel-item img {
